# HELIOPROP

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindROOT.cmake
examples/: example.xml
include/: TEnvironment.h  Timer.h  bfield.h  constants.h  energyaxis.h  environment.h  errorcode.h  gsl_minimizer.h  input.h  particles.h  pugi_wrapper.h  random.h  utilities.h
libs/pugixml/: CMakeLists.txt
libs/tinyxml/: CMakeLists.txt
src/: bcomponents.cpp  bfield.cpp  diffusiontensor.cpp  driftvelocity.cpp  helioprop.cpp  input.cpp  particles.cpp  pugi_wrapper.cpp
